--- a/app/view/microIndustryChain/microIndustryChain.html
+++ b/app/view/microIndustryChain/microIndustryChain.html
@@ -11,6 +11,9 @@
         <li id="mineTab" ng-click="clickMineTab()">
             <a ui-sref="microIndustryChain.mineChainView">我的产业链</a>
         </li>
+        <li id="articleTab" ng-click="clickArticleTab()">
+            <a ui-sref="microIndustryChain.articleView">我的文章</a>
+        </li>
     </ul>
 </div>
 
