完成财务分析，修复舆情分析存在的一些bug

--- a/app/view/microIndustryChain/microChainAnalysis/analysis.html
+++ b/app/view/microIndustryChain/microChainAnalysis/analysis.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="view/microIndustryChain/microChainAnalysis/analysis.css">
 <div class="modal-header">
-    <h3 class="modal-title">对公司“{{name}}”进行分析</h3>
+    <h4 class="modal-title" style="text-align: center">对公司“{{name}}”进行分析</h4>
 </div>
 <div class="modal-body" id="body">
 
@@ -11,6 +11,10 @@
     <label>
         <input type="radio" ng-model="method" value="opinion">
         舆情分析
+    </label>
+    <label>
+        <input type="radio" ng-model="method" value="financial">
+        财务对比评价
     </label>
 
 </div>
