--- a/app/view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.html
+++ b/app/view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.css">
 
 <div class="modal-header">
-    <h3 class="modal-title">对公司“{{name}}”进行PE分析</h3>
+    <h4 class="modal-title" style="text-align: center">对公司“{{name}}”进行PE分析</h4>
 </div>
-<div class="modal-body" id="body">
+<div class="modal-body">
 
     <div class="row">
         <div class="col-lg-8">
