--- a/app/view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.html
+++ b/app/view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="view/microIndustryChain/microChainAnalysis/publicOpinion/myModal.css">
 
 <div class="modal-header">
-    <h3 class="modal-title">  {{title}}</h3>
+    <h4 class="modal-title" style="text-align: center">  {{title}}</h4>
 </div>
 <div class="modal-body" id="body">
 
