完成微观分析

--- a/app/view/microIndustryChain/microChainAnalysis/analysis.html
+++ b/app/view/microIndustryChain/microChainAnalysis/analysis.html
@@ -19,5 +19,5 @@
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="confirm()">确定</button>
+    <button class="btn btn-primary"  data-loading-text="Loading..." type="button" ng-click="confirm()">确定</button>
 </div>
