--- a/app/view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.css
+++ b/app/view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.css
@@ -12,10 +12,17 @@
 .gray-font {
     color: lightgray;
 }
-.label-font{
+
+.label-font {
     color: white;
     font-size: 11px;
 
+}
+
+.transparent-btn {
+    background-color: transparent;
+    border: 0 solid transparent;
+    outline: none;!important;
 }
 
 .lower-pe {
@@ -26,10 +33,10 @@
     background-color: #4BA840;
 }
 
-
 .moderate-pe {
     color: #EE8031
 }
+
 .moderate-pe-background {
     background-color: #EE8031;
 }
@@ -37,12 +44,13 @@
 .higher-pe {
     color: #D44D4A
 }
+
 .higher-pe-background {
     background-color: #D44D4A;
 }
 
 .rank-container {
-    max-height: 400px;
+    max-height: 520px;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -50,16 +58,127 @@
 .rank-item {
     font-size: 14px;
     height: 50px;
-    border-bottom: 1px solid #f1f1f1;
+    border-top: 1px solid #f1f1f1;
 }
 
-.modal-dialog{
+.modal-dialog {
     width: 70% !important;
 }
 
-.current-company{
+.current-company {
     /*background-color: #f1f1f1;*/
     /*border: 1px solid grey;*/
     /*border-collapse: collapse;*/
     background-color: lightgray;
+}
+
+.spinner {
+    margin: 100px auto;
+    width: 20px;
+    height: 20px;
+    position: relative;
+}
+
+.container1 > div, .container2 > div, .container3 > div {
+    width: 6px;
+    height: 6px;
+    background-color: #333;
+
+    border-radius: 100%;
+    position: absolute;
+    -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
+    animation: bouncedelay 1.2s infinite ease-in-out;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.spinner .spinner-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.container2 {
+    -webkit-transform: rotateZ(45deg);
+    transform: rotateZ(45deg);
+}
+
+.container3 {
+    -webkit-transform: rotateZ(90deg);
+    transform: rotateZ(90deg);
+}
+
+.circle1 { top: 0; left: 0; }
+.circle2 { top: 0; right: 0; }
+.circle3 { right: 0; bottom: 0; }
+.circle4 { left: 0; bottom: 0; }
+
+.container2 .circle1 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.container3 .circle1 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.container1 .circle2 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.container2 .circle2 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+.container3 .circle2 {
+    -webkit-animation-delay: -0.7s;
+    animation-delay: -0.7s;
+}
+
+.container1 .circle3 {
+    -webkit-animation-delay: -0.6s;
+    animation-delay: -0.6s;
+}
+
+.container2 .circle3 {
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+}
+
+.container3 .circle3 {
+    -webkit-animation-delay: -0.4s;
+    animation-delay: -0.4s;
+}
+
+.container1 .circle4 {
+    -webkit-animation-delay: -0.3s;
+    animation-delay: -0.3s;
+}
+
+.container2 .circle4 {
+    -webkit-animation-delay: -0.2s;
+    animation-delay: -0.2s;
+}
+
+.container3 .circle4 {
+    -webkit-animation-delay: -0.1s;
+    animation-delay: -0.1s;
+}
+
+@-webkit-keyframes bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0.0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bouncedelay {
+    0%, 80%, 100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    } 40% {
+          transform: scale(1.0);
+          -webkit-transform: scale(1.0);
+      }
 }
