--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -69,7 +69,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -80,7 +80,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -91,7 +91,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -102,7 +102,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -113,7 +113,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -124,7 +124,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -135,7 +135,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -146,7 +146,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -157,7 +157,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -168,7 +168,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -179,7 +179,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -190,7 +190,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -201,7 +201,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -212,7 +212,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -223,7 +223,8 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[0]">
-                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="showCompanyPreview(item)">{{item.name}}</a></td>
+                        <!--<td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>-->
                     </tr>
                 </table>
             </div>
@@ -277,6 +278,71 @@
                 <!--</ul>-->
             <!--</div>-->
         <!--</div>-->
+        <!--公司详情预览-->
+        <div class="companyDetailPreview_container" ng-show="isShowingCompanyPreview">
+            <h4>公司信息 COMPANY INFORMATION</h4>
+            <div class="btn_close" ng-click="closeCompanyPreview()"></div>
+            <div class="companyDetailPreview">
+                <div class="companyIconAndName_container">
+                    <img class="companyIcon" src="view/resource/公文包图标.png"/>
+                    <div class="compNameFontSize mainFontColor">{{companyPreview_toShow.compName}}</div>
+                    <div class="otherContentFontSize purpleFontColor">{{companyPreview_toShow.compNameEng}}</div>
+                    <div>
+                        <a class="mainFontColor" style="text-align: right; text-decoration-line: underline;" href="" ng-click="goToCompanyDetails(companyPreview_toShow.stkcd)">公司详情... -></a>
+                    </div>
+                </div>
+                <div class="companyDetail_container">
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">公司代码</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.stkcd}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">公司属性</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.nature}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">成立日期</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.foundDate}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">是否上市</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.listingOrNot}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">法定代表人</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.chairman}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">会计年结日</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.fiscalDate}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">主要产品及业务</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.mainProduct}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">主营范围</div>
+                    </div>
+                    <div>
+                        <div class="item_value otherContentFontSize mainFontColor"><span>&emsp;</span>{{companyPreview_toShow.business}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">公司简介</div>
+                    </div>
+                    <div>
+                        <div class="item_value otherContentFontSize mainFontColor"><span>&emsp;</span>{{companyPreview_toShow.briefing}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">注册地址</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.address}}</div>
+                    </div>
+                    <div>
+                        <div class="item_name otherContentFontSize purpleFontColor">公司网址</div>
+                        <div class="item_value otherContentFontSize mainFontColor">{{companyPreview_toShow.website}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
