更改宏观部分的字体为等线

--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.css
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.css
@@ -17,6 +17,7 @@ body{
     /*background: url(/view/resource/背景.png);*/
     /*background-size: cover;*/
     /*min-height: 100vh;*/
+    font-family: 等线;
 }
 
 .dataPane{
