--- a/app/view/macroIndustryDisplay/mainQuotedCompany/cwsj/cwsj.css
+++ b/app/view/macroIndustryDisplay/mainQuotedCompany/cwsj/cwsj.css
@@ -1,38 +1,62 @@
 table{
-    font-size: 2px;
-    margin-left: 0%;
+    background-color:rgba(0,0,0,0); /* IE6和部分IE7内核的浏览器(如QQ浏览器)会读懂，但解析为透明 */
+    color: #d6d6d6;
+    font-size: 13px;
 }
 
 table th{
-    background: #E5F0FF;
     font-weight: 900;
     text-align: center;
-    border: 2px solid #E4E5E6;
+    font-size: 14px;
+    color: #d6d6d6;
+    height: 40px;
+    min-width: 95px;
 }
 
 
-table tr td{
+table tr{
     text-align: center;
-    border: 2px solid #E4E5E6;
     padding-top: 5px;
     padding-bottom: 5px;
-    text-align: center;
+    color: #d6d6d6;
+    height: 10px;
+    border: 1px solid rgb(67,67,67);
+    border-left-style: none;
+    border-right-style: none;
 }
 
-table tr:nth-child(odd){background:#F4F4F4;}
+table tr:nth-child(1) {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: #d6d6d6;
+    height: 10px;
+    border: 0px solid rgb(67,67,67);
 
+}
+
+table tr:nth-child(2) {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: #d6d6d6;
+    height: 10px;
+    border: 0px solid rgb(67,67,67);
+
+}
 .tableDiv{
-    width: 80%;
+    margin-left:10%;
+    width: 1250px;
     overflow-x: auto;
     overflow-y: hidden;
-    background-color: white
 }
 
 .myInput{
     display: inline-block;
     height: 19.6px;
     width: 110px;
-    background-color: white;
+    background-color: rgba(0,0,0,0);
+    color:rgba(170,170,170, 0.8);
     border: 1px solid rgb(170,170,170);
     padding-left: 5px;
     vertical-align: middle;
@@ -54,8 +78,9 @@ table tr:nth-child(odd){background:#F4F4F4;}
 .mySelect{
     width: 110px;
     margin-top: -5px;
-    margin-left: 215px;
-    background-color: white;
+    margin-left: 395px;
+    background-color: rgba(0,0,0,0);
+    color:rgba(170,170,170, 0.8);
     border-left: 1px solid rgb(0,0,0);
     border-top: 1px solid rgb(0,0,0);
     border-bottom: 1px solid rgb(112,143,193);
@@ -68,7 +93,7 @@ input{
 
 
 button{
-    background: linear-gradient(to bottom,rgb(238,252,255),rgb(210,225,240));
+    background: linear-gradient(to bottom,rgb(68,71,92),rgb(91,95,117));
     height: 20px;
     display: inline-block;
     vertical-align: middle;
@@ -77,18 +102,23 @@ button{
 }
 
 .pane{
+    background-color: rgba(49,48,53, 0.85);
+    background-size: 700px 460px;
+    background-position: -29px -12px;
+    color: white;
     position: absolute;
-    width: 600px;
+    width: 400px;
     height: 400px;
-    left: 30%;
-    top:22%;
-    border: 1px solid rgb(175,174,174);
+    left: 34%;
+    top:25%;
+    overflow: visible;
+    border:rgb(101,101,102) solid 1px;
+    border-radius: 15px;
 }
 
 .paneTitle{
-    background-color: white;
     color: rgb(167,168,165);
-    width: 598px;
+    width: 398px;
     height: 5%;
     font-size: 13px;
     text-indent: 1em;
@@ -96,30 +126,32 @@ button{
 }
 
 .paneBackground{
-    background-color: rgb(247,249,255);
-    width: 598px;
+    width: 398px;
     height: 98%;
     position: absolute;
     padding-top: 10px;
     font-family: 等线;
     font-weight: 600;
+    overflow: visible;
+
 }
 
 .paneCore{
-    background-color: white;
     width: 90%;
     margin-left: 5%;
     margin-top: 5%;
     height: 76%;
     position: absolute;
-    border: 2px solid rgb(224,234,247);
     padding-top: 10px;
     padding-left: 15px;
     overflow-y: auto;
 }
 
 button.myButton{
-    background: linear-gradient(to bottom, rgb(238, 252, 255), rgb(210, 225, 240));
+    border: rgb(0,0,0) solid 0px;
+    background: linear-gradient(to bottom,rgb(68,71,92),rgb(91,95,117));
+    color:rgba(255,255,255, 0.8);
+    font-size: 13px;
 }
 
 span.checkSpan{
@@ -132,4 +164,14 @@ span.checkSpan{
 
 img.closeIcon{
     cursor:pointer;
+}
+
+select{
+    background-color: rgba(0,0,0,0);
+    color:rgba(170,170,170, 0.8);
+}
+
+select option{
+    background-color: rgba(0,0,0,0.81);
+
 }
