--- a/app/view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.css
+++ b/app/view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.css
@@ -88,7 +88,7 @@ button{
 .navBar li.active{
     margin: 100px 0 100px 0;
     /*transition: margin 0.5s;*/
-    font-size: 25px;
+    font-size: 22px;
     color: rgba(135,150,250, 0.8);
     /*font-weight: bold;*/
     /*transform: translateX(-1.5px);*/
@@ -107,6 +107,7 @@ button{
 }
 .navBar .nav_item.active{
     color: rgba(135,150,250, 0.8);
+    text-shadow:0 0 5px rgba(255,255,255,0.5);
 }
 .navBar .vertical_line{
     position: absolute;
@@ -118,6 +119,7 @@ button{
     top: 50%;
     transform: translateY(-50%);
     margin: 0px;
+    border: 0;
 }
 /*二级列表*/
 .navBar li ul{
@@ -137,7 +139,9 @@ button{
 }
 .navBar .nav2_item.active {
     color: rgba(135,150,250, 0.8);
+    text-shadow:0 0 5px rgba(255,255,255,0.5);
 }
+
 select{
     background-color: rgba(0,0,0,0);
     color:rgba(170,170,170, 0.8);
