--- a/app/view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.css
+++ b/app/view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.css
@@ -63,7 +63,7 @@ table tr:nth-child(2) {
 .navBar li.active{
     margin: 100px 0 100px 0;
     /*transition: margin 0.5s;*/
-    font-size: 25px;
+    font-size: 22px;
     color: rgba(135,150,250, 0.8);
     /*font-weight: bold;*/
     /*transform: translateX(-1.5px);*/
@@ -82,6 +82,7 @@ table tr:nth-child(2) {
 }
 .navBar .nav_item.active{
     color: rgba(135,150,250, 0.8);
+    text-shadow:0 0 5px rgba(255,255,255,0.5);
 }
 .navBar .vertical_line{
     position: absolute;
@@ -93,6 +94,7 @@ table tr:nth-child(2) {
     top: 50%;
     transform: translateY(-50%);
     margin: 0px;
+    border: 0;
 }
 /*二级列表*/
 .navBar li ul{
@@ -112,6 +114,7 @@ table tr:nth-child(2) {
 }
 .navBar .nav2_item.active {
     color: rgba(135,150,250, 0.8);
+    text-shadow:0 0 5px rgba(255,255,255,0.5);
 }
 
 select{
