--- a/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.css
+++ b/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.css
@@ -78,7 +78,7 @@ tbody td{
 .navBar li.active{
     margin: 100px 0 100px 0;
     /*transition: margin 0.5s;*/
-    font-size: 25px;
+    font-size: 22px;
     color: rgba(135,150,250, 0.8);
     /*font-weight: bold;*/
     /*transform: translateX(-1.5px);*/
@@ -97,6 +97,7 @@ tbody td{
 }
 .navBar .nav_item.active{
     color: rgba(135,150,250, 0.8);
+    text-shadow:0 0 5px rgba(255,255,255,0.5);
 }
 .navBar .vertical_line{
     position: absolute;
@@ -108,6 +109,7 @@ tbody td{
     top: 50%;
     transform: translateY(-50%);
     margin: 0px;
+    border: 0;
 }
 /*二级列表*/
 .navBar li ul{
@@ -127,6 +129,7 @@ tbody td{
 }
 .navBar .nav2_item.active {
     color: rgba(135,150,250, 0.8);
+    text-shadow:0 0 5px rgba(255,255,255,0.5);
 }
 
 select{
